kube/gitea/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea
        image: gitea/gitea:1.21
        ports:
        - containerPort: 3000
          name: gitea
        - containerPort: 22
          name: git-ssh
        volumeMounts:
        - mountPath: "/data"
          readOnly: false
          name: nfs
          subPath: "gitea"
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: gitea
      securityContext:
        fsGroup: 1000
