kube/gitea/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
spec:
  ports:
  - name: gitea-tcp
    port: 3000
    targetPort: 3000
  selector:
    app: gitea
